# ZRHCstar

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CMakeOptions.txt  CNAME  Makefile  README  README.md  README.txt  _config.yml  index.markdown  logging.conf
_includes/: custom_definitions.css
_layouts/: default.html
css/: stylesheet.css
include/: .gitignore  anf_constraints.hpp  appinfo.h.in.cmake  application.hpp  assertion.hpp  data.hpp  descriptive_class.hpp  expr_tree.hpp  gender.hpp  haplotypes_genotypes.hpp  in-pedigree.hpp  io-haplotypes_genotypes.hpp  io-pedigree.hpp  log.hpp  out-pedigree.hpp  ped2cnf.hpp  pedcnf.hpp  pedcnf2hc.hpp  pedcnf_ext.hpp  pedigree.hpp  sat_solver_interface.hpp  tree.hpp  utility.hpp  zrhc_app.hpp
sample-input/: simple-pedigree.ped
scripts/: evaluate-results.py  execute-ZRHC.sh  generate-instances.sh  hc-generator.py  pedigree-generator.py
solver/: CMakeLists.txt
solver/cryptominisat/: Alg.h  CMakeLists.txt  SolverMisc.cpp  time_mem.h
src/: CMakeLists.txt  appinfo.h.in.cmake  application.hpp  assertion.hpp  configuration.h.in.cmake  gender.hpp  log.cpp  log.hpp  main.cpp  utility.hpp
src/application/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  anf_constraints.cpp  expr_tree.cpp  gender.cpp  log.cpp  ped2cnf.cpp  pedcnf.cpp  pedcnf_ext.cpp  sat_solver_interface.cpp  tree.cpp  utility.cpp
test/: CMakeLists.txt  haplotype_genotype_check.cpp  multifamily_pedigree_check.cpp  pedcnf_check.cpp  pedcnf_extreme_check.cpp  pedigree_check.cpp  pedigree_id_string_check.cpp  pedigree_io_check.cpp
tools/share/cmake/: ExtractSourceVersionFromGit.cmake
